KAYAKORW-379: Fixing the focusing presentation. (#26)
Summary:
    Fixing the focusing presentation.
    Fixing some test cases broken on the base branch.

--- a/ui/src/app/modules/login/pages/login-page/login-page.component.scss
+++ b/ui/src/app/modules/login/pages/login-page/login-page.component.scss
@@ -28,6 +28,13 @@
   z-index: 1;
 }
 
+button.focusable:focus {
+  border: 1px solid black !important;
+}
+a.focusable:focus, .focused-text {
+  text-decoration: underline;
+}
+
 .link {
   color: $au-gray-main;
 }
